# battleship

./: battleship.py  pyproject.toml  requirements.txt  run.py  setup.py  utils.py  webapp.py
Battleship/: __init__.py  events.py  extensions.py  game_controller.py  routes.py  shared_state.py
Battleship/client/: client.py
Battleship/server/: Manager.py  Room.py  User.py  webapp.py
Battleship/templates/: index.html
client/: client.py
pocs/: crypto_example_1.py  crypto_example_2.py  socket_example_client.py  socket_example_server.py
server/: Manager.py  Room.py  User.py  webapp.py
src/: __init__.py  battleship.py  events.py  extensions.py  game_controller.py  routes.py  shared_state.py  utils.py
src/Battleship/: events.py  routes.py
src/Battleship/templates/: index.html
src/client/: client.py
src/pocs/: crypto_example_1.py  crypto_example_2.py  socket_example_server.py
src/templates/: register.html
tests/: server_interaction.py  socket_example_server.py
