[project]
name = "battleship_package_fleshmanj"
version = "0.0.1"
authors = [
  { name="Joshua Fleshman", email="author@example.com" },
    { name="Adam Bairos", email="author@example.com" }
]
description = "A server based battleship game to host bot vs bot battles"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.entry-points]
console_scripts = [
    "run = battleship_package_fleshmanj.run:main"
]

[project.dependencies]
charset-normalizer = "3.3.2"
click = "8.1.7"
colorama = "0.4.6"
dnspython = "2.6.1"
eventlet = "0.35.2"
Flask = "3.0.2"
Flask-SocketIO = "5.3.6"
greenlet = "3.0.3"
h11 = "0.14.0"
idna = "3.6"
itsdangerous = "2.1.2"
Jinja2 = "3.1.3"
keyboard = "0.13.5"
MarkupSafe = "2.1.5"
netifaces = "0.10.6"
pycryptodome = "3.20.0"
python-engineio = "4.9.0"
python-socketio = "5.11.1"
requests = "2.31.0"
simple-websocket = "1.0.0"
socketio = "0.2.1"
urllib3 = "2.2.1"
websocket-client = "1.7.0"
Werkzeug = "3.0.1"
wsproto = "1.2.0"

[project.urls]
Homepage = "https://github.com/HourGlss/battleship"
Issues = "https://github.com/HourGlss/battleship/issues"